--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Deploy to GitHub Pages
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Build and Deploy
         run: |
+          npm install  # Replace with your build command if necessary
+          npm run build  # Replace with your build command if necessary
+
           mkdir deploy
-          cp -r * deploy/
+          cp -r !(deploy) deploy  # Copy all files except 'deploy' directory itself
+
           cd deploy
           git init
           git config --local user.email "actions@github.com"
